--- a/recursive_KAN.ipynb
+++ b/recursive_KAN.ipynb
@@ -482,7 +482,30 @@
       "Epoch [3/500], Loss: 3.4358, Testloss: 4.3171\n",
       "Epoch [4/500], Loss: 3.3139, Testloss: 5.6645\n",
       "Epoch [5/500], Loss: 3.2279, Testloss: 4.2506\n",
-      "Epoch [6/500], Loss: 2.9742, Testloss: 5.3869\n"
+      "Epoch [6/500], Loss: 2.9742, Testloss: 5.3869\n",
+      "Epoch [7/500], Loss: 2.8289, Testloss: 4.0530\n",
+      "Epoch [8/500], Loss: 2.8352, Testloss: 4.9429\n",
+      "Epoch [9/500], Loss: 2.6454, Testloss: 2.1916\n",
+      "Epoch [10/500], Loss: 2.7429, Testloss: 3.3426\n",
+      "Epoch [11/500], Loss: 2.4899, Testloss: 3.8084\n",
+      "Epoch [12/500], Loss: 2.4019, Testloss: 3.4524\n",
+      "Epoch [13/500], Loss: 2.4964, Testloss: 2.6647\n",
+      "Epoch [14/500], Loss: 2.3108, Testloss: 2.9419\n",
+      "Epoch [15/500], Loss: 2.4410, Testloss: 4.1831\n",
+      "Epoch [16/500], Loss: 2.4451, Testloss: 3.3848\n",
+      "Epoch [17/500], Loss: 2.1946, Testloss: 2.9423\n",
+      "Epoch [18/500], Loss: 2.0468, Testloss: 3.1581\n",
+      "Epoch [19/500], Loss: 2.0108, Testloss: 2.9837\n",
+      "Epoch [20/500], Loss: 2.0229, Testloss: 3.4736\n",
+      "Epoch [21/500], Loss: 1.9713, Testloss: 2.7376\n",
+      "Epoch [22/500], Loss: 1.9108, Testloss: 2.8464\n",
+      "Epoch [23/500], Loss: 1.8021, Testloss: 2.8909\n",
+      "Epoch [24/500], Loss: 1.8802, Testloss: 3.5526\n",
+      "Epoch [25/500], Loss: 1.7754, Testloss: 2.4226\n",
+      "Epoch [26/500], Loss: 1.8258, Testloss: 2.0614\n",
+      "Epoch [27/500], Loss: 1.6948, Testloss: 2.0690\n",
+      "Epoch [28/500], Loss: 1.7034, Testloss: 2.6478\n",
+      "Epoch [29/500], Loss: 1.7584, Testloss: 2.7318\n"
      ]
     }
    ],
