--- a/test.ipynb
+++ b/test.ipynb
@@ -22,29 +22,18 @@
     "import torch.nn as nn\n",
     "\n",
     "class GRU(nn.Module):\n",
-    "    def __init__(self, input_size, hidden_size, batch_first=True):\n",
+    "    def __init__(self, in_dim ,hidden, depth = 2):\n",
     "        super(GRU, self).__init__()\n",
-    "        self.hidden_size = hidden_size\n",
-    "        # GRU layer\n",
-    "        self.gru = nn.GRU(input_size, self.hidden_size, num_layers = 1)\n",
-    "        \n",
-    "        # Fully connected layer to map the hidden state to output\n",
-    "        self.fc = nn.Linear(self.hidden_size, input_size)\n",
+    "        self.hidden = hidden\n",
+    "        self.depth = depth\n",
+    "        self.gru = nn.GRU(in_dim, self.hidden, num_layers = self.depth, batch_first=True)\n",
     "        \n",
     "    def forward(self, x):\n",
-    "        batch_size = x.size(1)\n",
-    "        x.size(2)\n",
-    "        hidden_state = torch.ones(1,batch_size, self.hidden_size)#num_layer, batch_size, hidden_dim\n",
-    "        iters = 10\n",
-    "        print(x.shape)\n",
-    "        out,h = self.gru(x, hidden_state)\n",
-    "        print(out.shape)\n",
-    "        print(self.fc(out[:, -1, :]).shape)\n",
-    "        for t in range(iters):\n",
-    "            out, hidden_state = self.gru(x, hidden_state)\n",
-    "            x = self.fc(out[:, -1, :])\n",
-    "            x = x.reshape(-1,1,input_size) \n",
-    "        return x"
+    "        out, self.hidden_state = self.gru(x, self.hidden_state)\n",
+    "        return out\n",
+    "    \n",
+    "    def init_hidden(self, batch_size):\n",
+    "        self.hidden_state = torch.zeros(self.depth, batch_size, self.hidden)"
    ]
   },
   {
