--- a/Recursive_KAN_NN.ipynb
+++ b/Recursive_KAN_NN.ipynb
@@ -334,7 +334,93 @@
       "Epoch [2/100], Loss: 0.001409\n",
       "Epoch [3/100], Loss: 0.001427\n",
       "Epoch [4/100], Loss: 0.001440\n",
-      "Epoch [5/100], Loss: 0.001448\n"
+      "Epoch [5/100], Loss: 0.001448\n",
+      "Epoch [6/100], Loss: 0.001458\n",
+      "Epoch [7/100], Loss: 0.001461\n",
+      "Epoch [8/100], Loss: 0.001463\n",
+      "Epoch [9/100], Loss: 0.001430\n",
+      "Epoch [10/100], Loss: 0.001438\n",
+      "Epoch [11/100], Loss: 0.001426\n",
+      "Epoch [12/100], Loss: 0.001427\n",
+      "Epoch [13/100], Loss: 0.001480\n",
+      "Epoch [14/100], Loss: 0.001418\n",
+      "Epoch [15/100], Loss: 0.001441\n",
+      "Epoch [16/100], Loss: 0.001472\n",
+      "Epoch [17/100], Loss: 0.001426\n",
+      "Epoch [18/100], Loss: 0.001465\n",
+      "Epoch [19/100], Loss: 0.001399\n",
+      "Epoch [20/100], Loss: 0.001413\n",
+      "Epoch [21/100], Loss: 0.001400\n",
+      "Epoch [22/100], Loss: 0.001444\n",
+      "Epoch [23/100], Loss: 0.001380\n",
+      "Epoch [24/100], Loss: 0.001433\n",
+      "Epoch [25/100], Loss: 0.001426\n",
+      "Epoch [26/100], Loss: 0.001430\n",
+      "Epoch [27/100], Loss: 0.001420\n",
+      "Epoch [28/100], Loss: 0.001450\n",
+      "Epoch [29/100], Loss: 0.001386\n",
+      "Epoch [30/100], Loss: 0.001411\n",
+      "Epoch [31/100], Loss: 0.001375\n",
+      "Epoch [32/100], Loss: 0.001383\n",
+      "Epoch [33/100], Loss: 0.001388\n",
+      "Epoch [34/100], Loss: 0.001382\n",
+      "Epoch [35/100], Loss: 0.001376\n",
+      "Epoch [36/100], Loss: 0.001413\n",
+      "Epoch [37/100], Loss: 0.001402\n",
+      "Epoch [38/100], Loss: 0.001399\n",
+      "Epoch [39/100], Loss: 0.001386\n",
+      "Epoch [40/100], Loss: 0.001432\n",
+      "Epoch [41/100], Loss: 0.001459\n",
+      "Epoch [42/100], Loss: 0.001407\n",
+      "Epoch [43/100], Loss: 0.001381\n",
+      "Epoch [44/100], Loss: 0.001422\n",
+      "Epoch [45/100], Loss: 0.001402\n",
+      "Epoch [46/100], Loss: 0.001413\n",
+      "Epoch [47/100], Loss: 0.001416\n",
+      "Epoch [48/100], Loss: 0.001372\n",
+      "Epoch [49/100], Loss: 0.001379\n",
+      "Epoch [50/100], Loss: 0.001406\n",
+      "Epoch [51/100], Loss: 0.001364\n",
+      "Epoch [52/100], Loss: 0.001363\n",
+      "Epoch [53/100], Loss: 0.001398\n",
+      "Epoch [54/100], Loss: 0.001408\n",
+      "Epoch [55/100], Loss: 0.001409\n",
+      "Epoch [56/100], Loss: 0.001386\n",
+      "Epoch [57/100], Loss: 0.001359\n",
+      "Epoch [58/100], Loss: 0.001410\n",
+      "Epoch [59/100], Loss: 0.001411\n",
+      "Epoch [60/100], Loss: 0.001419\n",
+      "Epoch [61/100], Loss: 0.001415\n",
+      "Epoch [62/100], Loss: 0.001372\n",
+      "Epoch [63/100], Loss: 0.001393\n",
+      "Epoch [64/100], Loss: 0.001420\n",
+      "Epoch [65/100], Loss: 0.001406\n",
+      "Epoch [66/100], Loss: 0.001412\n",
+      "Epoch [67/100], Loss: 0.001420\n",
+      "Epoch [68/100], Loss: 0.001431\n",
+      "Epoch [69/100], Loss: 0.001406\n",
+      "Epoch [70/100], Loss: 0.001408\n",
+      "Epoch [71/100], Loss: 0.001426\n",
+      "Epoch [72/100], Loss: 0.012504\n",
+      "Epoch [73/100], Loss: 0.072874\n",
+      "Epoch [74/100], Loss: 0.071850\n",
+      "Epoch [75/100], Loss: 0.073729\n",
+      "Epoch [76/100], Loss: 0.077094\n",
+      "Epoch [77/100], Loss: 0.071582\n",
+      "Epoch [78/100], Loss: 0.066929\n",
+      "Epoch [79/100], Loss: 0.069733\n",
+      "Epoch [80/100], Loss: 0.070333\n",
+      "Epoch [81/100], Loss: 0.068111\n",
+      "Epoch [82/100], Loss: 0.061547\n",
+      "Epoch [83/100], Loss: 0.058925\n",
+      "Epoch [84/100], Loss: 0.059363\n",
+      "Epoch [85/100], Loss: 0.050941\n",
+      "Epoch [86/100], Loss: 0.045806\n",
+      "Epoch [87/100], Loss: 0.012297\n",
+      "Epoch [88/100], Loss: 0.001486\n",
+      "Epoch [89/100], Loss: 0.001486\n",
+      "Epoch [90/100], Loss: 0.001528\n",
+      "Epoch [91/100], Loss: 0.001459\n"
      ]
     }
    ],
